# libcint

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt  README_MODERN_FORTRAN.md  fortran_modern_cartesian.F90  fortran_modern_spheric.F90  fortran_modern_spinor.F90  fortran_time_c2h6.F90
examples/fortran/: Fortran_details.md  README.md  README_CLEAN_FORTRAN_API.md  README_FORTRAN_LAYERS.md  fortran_call_cartesian.F90  fortran_call_spheric.F90  fortran_call_spinor.F90  fortran_modern_cartesian.F90  fortran_modern_spheric.F90  fortran_modern_spinor.F90  fortran_pure_example.F90  fortran_structured_demo.F90  fortran_time_c2h6.F90  fortran_time_c2h6_pure.F90  libcint_fortran.f90  libcint_interface.f90
include/: libcint_fortran.f90  libcint_interface.f90
